--- a/WaterTracker/Resources/Base.lproj/Main.storyboard
+++ b/WaterTracker/Resources/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
                                     <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="dropButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ftt-1i-p6p"/>
+                                    <action selector="waterButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tgU-Pt-pKT"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HRn-fq-y9J">
@@ -90,10 +90,10 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="dropButton" destination="YL1-AL-rxW" id="B5O-jT-iAe"/>
                         <outlet property="mlLabel" destination="dtE-QR-nhD" id="ZxG-xH-SMQ"/>
                         <outlet property="percentageLabel" destination="RTp-GE-QKL" id="AjG-PV-hEp"/>
                         <outlet property="progressBarView" destination="HRn-fq-y9J" id="Jey-en-bLc"/>
+                        <outlet property="waterButton" destination="YL1-AL-rxW" id="RD5-r5-uLi"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
