--- a/WaterTracker/Resources/Base.lproj/Main.storyboard
+++ b/WaterTracker/Resources/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HMK-oT-UIJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HMK-oT-UIJ">
     <device id="retina6_3" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="OE3-yR-tzu">
-                                <rect key="frame" x="116.33333333333333" y="276" width="169.66666666666669" height="119.66666666666669"/>
+                                <rect key="frame" x="116.33333333333333" y="338" width="169.66666666666669" height="119.66666666666669"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RTp-GE-QKL">
                                         <rect key="frame" x="0.0" y="0.0" width="133" height="119.66666666666667"/>
@@ -35,7 +35,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YL1-AL-rxW">
-                                <rect key="frame" x="147.66666666666666" y="722" width="107" height="107"/>
+                                <rect key="frame" x="147.66666666666666" y="688" width="107" height="107"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="107" id="3KQ-8W-ss6"/>
                                     <constraint firstAttribute="width" constant="107" id="qYi-OV-y4V"/>
@@ -50,16 +50,33 @@
                                     <action selector="waterButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tgU-Pt-pKT"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="keH-Ww-JIv" userLabel="Goal Bar View">
+                                <rect key="frame" x="0.0" y="321" width="6" height="500"/>
+                                <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="500" id="fqb-dj-1pG"/>
+                                    <constraint firstAttribute="width" constant="6" id="z4B-Bj-puo"/>
+                                </constraints>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HRn-fq-y9J">
-                                <rect key="frame" x="16" y="819" width="6" height="10"/>
+                                <rect key="frame" x="0.0" y="811" width="6" height="10"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="6" id="cml-6Y-1jq"/>
                                     <constraint firstAttribute="height" constant="10" identifier="progressHeight" id="fhX-TJ-tfM"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1000mL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1kL-Pz-82S" userLabel="Goal Label">
+                                <rect key="frame" x="12" y="301" width="74.666666666666671" height="20.333333333333314"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="1kL-Pz-82S" secondAttribute="height" multiplier="11:3" id="QWf-4a-xsI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
+                                <color key="textColor" systemColor="opaqueSeparatorColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0mL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dtE-QR-nhD">
-                                <rect key="frame" x="28.000000000000007" y="819" width="74.666666666666686" height="20.333333333333371"/>
+                                <rect key="frame" x="12" y="811" width="74.666666666666671" height="20.333333333333371"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="dtE-QR-nhD" secondAttribute="height" multiplier="11:3" id="pAV-ce-Z6U"/>
                                 </constraints>
@@ -72,12 +89,16 @@
                         <color key="backgroundColor" red="0.015409938049101544" green="0.20912083239518245" blue="0.43606613005050487" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="YL1-AL-rxW" secondAttribute="bottom" constant="11" id="1DM-vX-Xj3"/>
+                            <constraint firstItem="keH-Ww-JIv" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="15" id="5Mc-pF-PK3"/>
                             <constraint firstItem="OE3-yR-tzu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9FU-dw-WgK"/>
                             <constraint firstItem="dtE-QR-nhD" firstAttribute="leading" secondItem="HRn-fq-y9J" secondAttribute="trailing" constant="6" id="9hW-gS-qU5"/>
                             <constraint firstItem="YL1-AL-rxW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OGM-pl-KlF"/>
-                            <constraint firstItem="HRn-fq-y9J" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="jV5-lT-Vak"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="HRn-fq-y9J" secondAttribute="bottom" constant="11" id="k95-Cu-8U9"/>
+                            <constraint firstItem="1kL-Pz-82S" firstAttribute="leading" secondItem="keH-Ww-JIv" secondAttribute="trailing" constant="6" id="XIj-MB-O7K"/>
+                            <constraint firstItem="HRn-fq-y9J" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="jV5-lT-Vak"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="HRn-fq-y9J" secondAttribute="bottom" constant="-15" id="k95-Cu-8U9"/>
                             <constraint firstItem="dtE-QR-nhD" firstAttribute="top" secondItem="HRn-fq-y9J" secondAttribute="bottom" constant="-10" id="r0V-7s-Sa3"/>
+                            <constraint firstItem="keH-Ww-JIv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="rq0-fq-jEU"/>
+                            <constraint firstItem="1kL-Pz-82S" firstAttribute="top" secondItem="keH-Ww-JIv" secondAttribute="top" constant="-20" id="sA2-Bu-GXZ"/>
                             <constraint firstItem="OE3-yR-tzu" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="170" id="y2A-uv-Bdf"/>
                         </constraints>
                     </view>
@@ -90,6 +111,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="goalBarHeightConstraint" destination="fqb-dj-1pG" id="wpt-as-uTZ"/>
+                        <outlet property="goalBarView" destination="keH-Ww-JIv" id="PlV-9Q-lAc"/>
+                        <outlet property="goalMlLabel" destination="1kL-Pz-82S" id="q3A-1S-GQf"/>
                         <outlet property="mlLabel" destination="dtE-QR-nhD" id="ZxG-xH-SMQ"/>
                         <outlet property="percentageLabel" destination="RTp-GE-QKL" id="AjG-PV-hEp"/>
                         <outlet property="progressBarView" destination="HRn-fq-y9J" id="Jey-en-bLc"/>
@@ -109,7 +133,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="GmO-f6-wta">
-                                <rect key="frame" x="0.0" y="106" width="402" height="768"/>
+                                <rect key="frame" x="0.0" y="168" width="402" height="706"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -165,7 +189,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HMK-oT-UIJ" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="1OX-8K-yXr">
-                        <rect key="frame" x="0.0" y="62" width="402" height="44"/>
+                        <rect key="frame" x="0.0" y="124" width="402" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <textAttributes key="titleTextAttributes">
@@ -185,6 +209,9 @@
     <resources>
         <image name="drop.fill" catalog="system" width="96" height="128"/>
         <image name="gearshape.fill" catalog="system" width="128" height="123"/>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
