--- a/WaterTracker/Resources/Base.lproj/Main.storyboard
+++ b/WaterTracker/Resources/Base.lproj/Main.storyboard
@@ -52,7 +52,7 @@
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="keH-Ww-JIv" userLabel="Goal Bar View">
                                 <rect key="frame" x="0.0" y="321" width="6" height="500"/>
-                                <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                                <color key="backgroundColor" red="0.77415490149999999" green="0.77446836230000005" blue="0.78225296740000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="500" id="fqb-dj-1pG"/>
                                     <constraint firstAttribute="width" constant="6" id="z4B-Bj-puo"/>
@@ -72,7 +72,7 @@
                                     <constraint firstAttribute="width" secondItem="1kL-Pz-82S" secondAttribute="height" multiplier="11:3" id="QWf-4a-xsI"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
-                                <color key="textColor" systemColor="opaqueSeparatorColor"/>
+                                <color key="textColor" red="0.77415490149999999" green="0.77446836230000005" blue="0.78225296740000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0mL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dtE-QR-nhD">
@@ -84,6 +84,12 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Intake: 9.35" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9eO-S5-4f7">
+                                <rect key="frame" x="138" y="439" width="126" height="34.666666666666686"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.77415490149999999" green="0.77446836230000005" blue="0.78225296740000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.015409938049101544" green="0.20912083239518245" blue="0.43606613005050487" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -92,10 +98,13 @@
                             <constraint firstItem="keH-Ww-JIv" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="15" id="5Mc-pF-PK3"/>
                             <constraint firstItem="OE3-yR-tzu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9FU-dw-WgK"/>
                             <constraint firstItem="dtE-QR-nhD" firstAttribute="leading" secondItem="HRn-fq-y9J" secondAttribute="trailing" constant="6" id="9hW-gS-qU5"/>
+                            <constraint firstItem="9eO-S5-4f7" firstAttribute="centerX" secondItem="OE3-yR-tzu" secondAttribute="centerX" id="FcW-yC-dZc"/>
+                            <constraint firstItem="9eO-S5-4f7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="271" id="MaV-9W-GlY"/>
                             <constraint firstItem="YL1-AL-rxW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OGM-pl-KlF"/>
                             <constraint firstItem="1kL-Pz-82S" firstAttribute="leading" secondItem="keH-Ww-JIv" secondAttribute="trailing" constant="6" id="XIj-MB-O7K"/>
                             <constraint firstItem="HRn-fq-y9J" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="jV5-lT-Vak"/>
                             <constraint firstAttribute="bottomMargin" secondItem="HRn-fq-y9J" secondAttribute="bottom" constant="-15" id="k95-Cu-8U9"/>
+                            <constraint firstItem="9eO-S5-4f7" firstAttribute="bottom" secondItem="OE3-yR-tzu" secondAttribute="bottom" constant="16" id="naK-KP-mQc"/>
                             <constraint firstItem="dtE-QR-nhD" firstAttribute="top" secondItem="HRn-fq-y9J" secondAttribute="bottom" constant="-10" id="r0V-7s-Sa3"/>
                             <constraint firstItem="keH-Ww-JIv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="rq0-fq-jEU"/>
                             <constraint firstItem="1kL-Pz-82S" firstAttribute="top" secondItem="keH-Ww-JIv" secondAttribute="top" constant="-20" id="sA2-Bu-GXZ"/>
@@ -114,8 +123,10 @@
                         <outlet property="goalBarHeightConstraint" destination="fqb-dj-1pG" id="wpt-as-uTZ"/>
                         <outlet property="goalBarView" destination="keH-Ww-JIv" id="PlV-9Q-lAc"/>
                         <outlet property="goalMlLabel" destination="1kL-Pz-82S" id="q3A-1S-GQf"/>
+                        <outlet property="lastIntakeLabel" destination="9eO-S5-4f7" id="CSP-jK-4Mw"/>
                         <outlet property="mlLabel" destination="dtE-QR-nhD" id="ZxG-xH-SMQ"/>
                         <outlet property="percentageLabel" destination="RTp-GE-QKL" id="AjG-PV-hEp"/>
+                        <outlet property="percentageSymbolLabel" destination="WAd-Ov-w7t" id="Kh7-mt-dqQ"/>
                         <outlet property="progressBarView" destination="HRn-fq-y9J" id="Jey-en-bLc"/>
                         <outlet property="waterButton" destination="YL1-AL-rxW" id="RD5-r5-uLi"/>
                     </connections>
@@ -209,9 +220,6 @@
     <resources>
         <image name="drop.fill" catalog="system" width="96" height="128"/>
         <image name="gearshape.fill" catalog="system" width="128" height="123"/>
-        <systemColor name="opaqueSeparatorColor">
-            <color red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
