--- a/WaterTracker/Resources/Base.lproj/Main.storyboard
+++ b/WaterTracker/Resources/Base.lproj/Main.storyboard
@@ -17,19 +17,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="402" height="874"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view alpha="0.25" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MtU-qQ-5ql" userLabel="waveView" customClass="WaveView" customModule="WaterTracker" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="771.33333333333337" width="402" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="m0g-Y8-AVe"/>
+                                </constraints>
+                            </view>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="OE3-yR-tzu">
                                 <rect key="frame" x="116.33333333333333" y="338" width="169.66666666666669" height="119.66666666666669"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RTp-GE-QKL">
                                         <rect key="frame" x="0.0" y="0.0" width="133" height="119.66666666666667"/>
                                         <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="100"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="textColor" red="0.32129043340000002" green="0.55658131840000002" blue="0.94772952799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WAd-Ov-w7t">
                                         <rect key="frame" x="141" y="42" width="28.666666666666657" height="36"/>
                                         <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="30"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="textColor" red="0.32129043340000002" green="0.55658131840000002" blue="0.94772952799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -45,6 +51,7 @@
                                 <buttonConfiguration key="configuration" style="filled" title="" cornerStyle="capsule">
                                     <imageReference key="image" image="drop.fill" catalog="system" symbolScale="large"/>
                                     <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="baseBackgroundColor" red="0.32129043340000002" green="0.55658131840000002" blue="0.94772952799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="waterButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tgU-Pt-pKT"/>
@@ -52,7 +59,7 @@
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="keH-Ww-JIv" userLabel="Goal Bar View">
                                 <rect key="frame" x="0.0" y="321" width="6" height="500"/>
-                                <color key="backgroundColor" red="0.77415490149999999" green="0.77446836230000005" blue="0.78225296740000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="500" id="fqb-dj-1pG"/>
                                     <constraint firstAttribute="width" constant="6" id="z4B-Bj-puo"/>
@@ -60,7 +67,7 @@
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HRn-fq-y9J">
                                 <rect key="frame" x="0.0" y="811" width="6" height="10"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.32129043340000002" green="0.55658131840000002" blue="0.94772952799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="6" id="cml-6Y-1jq"/>
                                     <constraint firstAttribute="height" constant="10" identifier="progressHeight" id="fhX-TJ-tfM"/>
@@ -72,7 +79,7 @@
                                     <constraint firstAttribute="width" secondItem="1kL-Pz-82S" secondAttribute="height" multiplier="11:3" id="QWf-4a-xsI"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
-                                <color key="textColor" red="0.77415490149999999" green="0.77446836230000005" blue="0.78225296740000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0mL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dtE-QR-nhD">
@@ -81,29 +88,32 @@
                                     <constraint firstAttribute="width" secondItem="dtE-QR-nhD" secondAttribute="height" multiplier="11:3" id="pAV-ce-Z6U"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" red="0.32129043340000002" green="0.55658131840000002" blue="0.94772952799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Intake: 9.35" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9eO-S5-4f7">
                                 <rect key="frame" x="138" y="439" width="126" height="34.666666666666686"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.77415490149999999" green="0.77446836230000005" blue="0.78225296740000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" red="0.015409938049101544" green="0.20912083239518245" blue="0.43606613005050487" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="YL1-AL-rxW" secondAttribute="bottom" constant="11" id="1DM-vX-Xj3"/>
+                            <constraint firstItem="MtU-qQ-5ql" firstAttribute="bottom" secondItem="dtE-QR-nhD" secondAttribute="bottom" id="3w8-fX-uD4"/>
                             <constraint firstItem="keH-Ww-JIv" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="15" id="5Mc-pF-PK3"/>
                             <constraint firstItem="OE3-yR-tzu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9FU-dw-WgK"/>
                             <constraint firstItem="dtE-QR-nhD" firstAttribute="leading" secondItem="HRn-fq-y9J" secondAttribute="trailing" constant="6" id="9hW-gS-qU5"/>
                             <constraint firstItem="9eO-S5-4f7" firstAttribute="centerX" secondItem="OE3-yR-tzu" secondAttribute="centerX" id="FcW-yC-dZc"/>
+                            <constraint firstItem="MtU-qQ-5ql" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="KCF-sY-PcQ"/>
                             <constraint firstItem="9eO-S5-4f7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="271" id="MaV-9W-GlY"/>
                             <constraint firstItem="YL1-AL-rxW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OGM-pl-KlF"/>
                             <constraint firstItem="1kL-Pz-82S" firstAttribute="leading" secondItem="keH-Ww-JIv" secondAttribute="trailing" constant="6" id="XIj-MB-O7K"/>
                             <constraint firstItem="HRn-fq-y9J" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="jV5-lT-Vak"/>
                             <constraint firstAttribute="bottomMargin" secondItem="HRn-fq-y9J" secondAttribute="bottom" constant="-15" id="k95-Cu-8U9"/>
+                            <constraint firstAttribute="trailing" secondItem="MtU-qQ-5ql" secondAttribute="trailing" id="lwA-dG-jHK"/>
                             <constraint firstItem="9eO-S5-4f7" firstAttribute="bottom" secondItem="OE3-yR-tzu" secondAttribute="bottom" constant="16" id="naK-KP-mQc"/>
                             <constraint firstItem="dtE-QR-nhD" firstAttribute="top" secondItem="HRn-fq-y9J" secondAttribute="bottom" constant="-10" id="r0V-7s-Sa3"/>
                             <constraint firstItem="keH-Ww-JIv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="rq0-fq-jEU"/>
@@ -113,7 +123,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="ob1-2s-Gn8">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="gearshape.fill" catalog="system" id="JK0-Wh-7JZ">
-                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="tintColor" red="0.32129043340000002" green="0.55658131840000002" blue="0.94772952799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <segue destination="wyM-G9-3pH" kind="push" id="btT-k8-3aD"/>
                             </connections>
@@ -129,6 +139,8 @@
                         <outlet property="percentageSymbolLabel" destination="WAd-Ov-w7t" id="Kh7-mt-dqQ"/>
                         <outlet property="progressBarView" destination="HRn-fq-y9J" id="Jey-en-bLc"/>
                         <outlet property="waterButton" destination="YL1-AL-rxW" id="RD5-r5-uLi"/>
+                        <outlet property="waveView" destination="MtU-qQ-5ql" id="Pwu-Es-d97"/>
+                        <outlet property="waveViewHeightConstraint" destination="m0g-Y8-AVe" id="wkY-e0-yod"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
